Enhance CSS styles for main content, latest activities, and plans sections to improve layout, responsiveness, and visual appeal

--- a/plans.html
+++ b/plans.html
@@ -68,16 +68,236 @@
                     <label for="search">
                         <input type="search" placeholder="search" name="search" id="search">
                     </label>
-                <div class="nav">
-                    <i class="fa fa-bell"></i>
-                    <img src="images/avatar.png" alt="">
-                </div>
+                    <div class="nav">
+                        <i class="fa fa-bell"></i>
+                        <img src="images/avatar.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="main-section">
                 <div class="container">
                     <h1 class="main-header">Plans</h1>
-                    <div class="content"></div>
+                    <div class="content-plans">
+                        <div class="plan">
+                            <div class="header">
+                                <h3>Free</h3>
+                                <span class="price"><sup>$</sup>0.00</span>
+                            </div>
+                            <ul>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Access All Text Lessons
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Access All Videos Lessons
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Appear On Leaderboard
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-times red"></i>
+                                        Browse Content Without Ads
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-times red"></i>
+                                        Access All Assignments
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-times red"></i>
+                                        Get Daily Prizes
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-times red"></i>
+                                        Earn Certificate
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-times red"></i>
+                                        1 GB Space For Hosting Files
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-times red"></i>
+                                        Access Badge System
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                            </ul>
+                            <a href="#">Join</a>
+                            <p>This Is Your Current Plan</p>
+                        </div>
+                        <div class="plan">
+                            <div class="header">
+                                <h3>Basic</h3>
+                                <span class="price"><sup>$</sup>7.99</span>
+                            </div>
+                            <ul>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Access All Text Lessons
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Access All Videos Lessons
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Appear On Leaderboard
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check "></i>
+                                        Browse Content Without Ads
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fas fa-check"></i>
+                                        Access All Assignments
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Get Daily Prizes
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Earn Certificate
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-times red"></i>
+                                        1 GB Space For Hosting Files
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-times red"></i>
+                                        Access Badge System
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                            </ul>
+                            <a href="#">Join</a>
+                            <p>This Is Your Current Plan</p>
+                        </div>
+                        <div class="plan current-plan">
+                            <div class="header">
+                                <h3>Premium</h3>
+                                <span class="price"><sup>$</sup>19.99</span>
+                            </div>
+                            <ul>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Access All Text Lessons
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Access All Videos Lessons
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Appear On Leaderboard
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check "></i>
+                                        Browse Content Without Ads
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fas fa-check"></i>
+                                        Access All Assignments
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Get Daily Prizes
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Earn Certificate
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        1 GB Space For Hosting Files
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                                <li>
+                                    <span>
+                                        <i class="fa fa-check"></i>
+                                        Access Badge System
+                                    </span>
+                                    <a href="#"><i class="fa fa-info-circle"></i></a>
+                                </li>
+                            </ul>
+                            <a href="#">Join</a>
+                            <p>This Is Your Current Plan</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
