--- a/profile.html
+++ b/profile.html
@@ -76,7 +76,7 @@
             <div class="main-section">
                 <div class="container">
                     <h1 class="main-header">Profile</h1>
-                    <div class="content">
+                    <div class="content-profile">
                         <div class="main-content">
                             <div class="info">
                                 <img src="images/avatar.png" alt="">
@@ -96,70 +96,135 @@
                             </div>
                             <div class="boxes">
                                 <div class="box">
-                                    <div class="general-info">
-                                        <p>General Information</p>
+                                    <p>General Information</p>
+                                    <div class="content-box">
                                         <p>Full Name: <span>Aiham Mohammed</span></p>
                                         <p>Gender: <span>Male</span></p>
                                         <p>Country: <span>Yemen</span></p>
                                         <p><span class="toggle-button"></span></p>
                                     </div>
                                 </div>
-                                <div class="personal-info"></div>
-                                <div class="job-info"></div>
-                                <div class="billing-info"></div>
-                            </div>
-                        </div>
-                        <div class="my-skills">
-                            <div class="secondary-header">
-                                <h2>My Skills</h2>
-                                <p>Complete Skills List</p>
-                            </div>
-                            <div class="box">
-                                <span>HTML</span>
-                                <span>Pugjs</span>
-                                <span>HAML</span>
-                            </div>
-                            <div class="box">
-                                <span>CSS</span>
-                                <span>SASS</span>
-                                <span>stylus</span>
-                            </div>
-                            <div class="box">
-                                <span>JavaScript</span>
-                                <span>TypeScript</span>
-                            </div>
-                            <div class="box">
-                                <span>Vuejs</span>
-                                <span>Reactjs</span>
-                            </div>
-                            <div class="box">
-                                <span>Jest</span>
-                                <span>Jasmine</span>
-                            </div>
-                            <div class="box">
-                                <span>PHP</span>
-                                <span>Laravel</span>
-                            </div>
-                            <div class="box">
-                                <span>Python</span>
-                                <span>Django</span>
-                            </div>
-                        </div>
-                        <div class="latest-activities">
-                            <div class="secondary-header">
-                                <h2>Latest Activities</h2>
-                                <p>Latest Activities Done By The User</p>
-                            </div>
-                            <div class="box">
-                                <img src="images/activity-01.png" alt="">
-                                <div class="info">
-                                    <div class="inner-box-right">
-                                        <span>Store</span>
-                                        <p>Bought The Mastering Python Course</p>
+                                <div class="box">
+                                    <p>Personal Information</p>
+                                    <div class="content-box">
+                                        <p>Email: <span>aihamjassar@gmail.com</span></p>
+                                        <p>Phone: <span>779082646</span></p>
+                                        <p>Date Of Birth: <span>3/9/2002</span></p>
+                                        <p><span class="toggle-button no-active"></span></p>
                                     </div>
-                                    
-                                        <span>18:10</span>
-                                        <span>Yesterday</span>
+                                </div>
+                                <div class="box">
+                                    <p>Job Information</p>
+                                    <div class="content-box">
+                                        <p>Title: <span>Full Stack Developer</span></p>
+                                        <p>Programming Language: <span>Javascript</span></p>
+                                        <p>Years Of Experience: <span>1.5</span></p>
+                                        <p><span class="toggle-button"></span></p>
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <p>Billing Information</p>
+                                    <div class="content-box">
+                                        <p>Payment Method: <span>Paypal</span></p>
+                                        <p>Email: <span>email@website.com</span></p>
+                                        <p>Subscription: <span>Monthly</span></p>
+                                        <p><span class="toggle-button no-active"></span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bottom">
+                            <div class="my-skills">
+                                <div class="secondary-header">
+                                    <h2>My Skills</h2>
+                                    <p>Complete Skills List</p>
+                                </div>
+                                <div class="box">
+                                    <span>HTML</span>
+                                    <span>Pugjs</span>
+                                    <span>HAML</span>
+                                </div>
+                                <div class="box">
+                                    <span>CSS</span>
+                                    <span>SASS</span>
+                                    <span>stylus</span>
+                                </div>
+                                <div class="box">
+                                    <span>JavaScript</span>
+                                    <span>TypeScript</span>
+                                </div>
+                                <div class="box">
+                                    <span>Vuejs</span>
+                                    <span>Reactjs</span>
+                                </div>
+                                <div class="box">
+                                    <span>Jest</span>
+                                    <span>Jasmine</span>
+                                </div>
+                                <div class="box">
+                                    <span>PHP</span>
+                                    <span>Laravel</span>
+                                </div>
+                                <div class="box">
+                                    <span>Python</span>
+                                    <span>Django</span>
+                                </div>
+                            </div>
+                            <div class="latest-activities">
+                                <div class="secondary-header">
+                                    <h2>Latest Activities</h2>
+                                    <p>Latest Activities Done By The User</p>
+                                </div>
+                                <div class="box">
+                                    <img src="images/activity-01.png" alt="">
+                                    <div class="info">
+                                        <div class="inner-box-left">
+                                            <span>Store</span>
+                                            <p>Bought The Mastering Python Course</p>
+                                        </div>
+                                        <div class="inner-box-right">
+                                            <span>18:10</span>
+                                            <span>Yesterday</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <img src="images/activity-02.png" alt="">
+                                    <div class="info">
+                                        <div class="inner-box-left">
+                                            <span>Academy</span>
+                                            <p>Got The PHP Certificate</p>
+                                        </div>
+                                        <div class="inner-box-right">
+                                            <span>16:05</span>
+                                            <span>Yesterday</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <img src="images/activity-03.png" alt="">
+                                    <div class="info">
+                                        <div class="inner-box-left">
+                                            <span>Badges</span>
+                                            <p>Unlocked The 10 Skills Badge</p>
+                                        </div>
+                                        <div class="inner-box-right">
+                                            <span>18:05</span>
+                                            <span>Yesterday</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <img src="images/activity-01.png" alt="">
+                                    <div class="info">
+                                        <div class="inner-box-left">
+                                            <span>Badges</span>
+                                            <p>Bought The Typescript Course</p>
+                                        </div>
+                                        <div class="inner-box-right">
+                                            <span>12:05</span>
+                                            <span>Yesterday</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -168,6 +233,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
